WHAT IS NEW: https://bit.ly/2WqXmp6
ChangeLog: https://bit.ly/2WuaDgK
NEWSLETTER: https://die-netzmacher.de/newsletter


[BUGFIX] Content Elements will not displayed

6.1.9
  21-06-15
	Author: Dirk Wildt (Die Netzmacher), http://wildt.at.die-netzmacher.de
	* #t6156: [BUGFIX] Content Elements are not displayed
						Affected files:

6.1.8
  21-06-12
	Author: Dirk Wildt (verdigado eG), support@verdigado.com
	* #v1276: [TASK] CType option group: compatibility with TYPO3 10.4
						Affected files:
						* Configuration/TCA/Overrides/Default/tt_content/addTcaSelectItem.php
	* #i0086: [BUGFIX]
						Moved file:
						* Resources/Private/Fluid/8.7/Slick/Partials
							* XXXImage.html -> Image.html

6.1.7
  21-04-30
	Author: Dirk Wildt (Die Netzmacher), http://wildt.at.die-netzmacher.de
	* #i0086: [BUGFIX] Is removed: <f:debug title="@kjbgkadfjb">{file}</f:debug>
						Affected files:
						* Resources/Private/Fluid/FluidStyledContent/Partials/Media
							* Version.html
							* Version/087.html

6.1.6
  21-02-14
	Author: Dirk Wildt (Die Netzmacher), http://wildt.at.die-netzmacher.de
	* #i0085: [BUGFIX] lazyLoading TYPO3 8.7
						Affected files:
						* Resources/Private/Fluid
							* Default/Slick/Partials/Image.html
							* Fluid/FluidStyledContent/Templates
								* Slickcontent.html
								* Slickfilecollection.html
						Moved files:
						* Resources/Private/Fluid/8.7/Slick
							* Partials/Image.html -> XXXImage.html
							* Templates/Slickitem_4.5.3.html -> XXXSlickitem_4.5.3.html
						* Resources/Private/Fluid
							* Default/Slick/Templates/Slickitem_4.5.3.html -> XXXSlickitem_4.5.3.html
							* FluidStyledContent/ImageWoFigure/Partials/Media/Rendering/Image.html -> XXXImage.html
						New files:
						* Classes/Userfunc/Typo3VersionUserfunc.php
						* Configuration/TypoScript/Default/Base/Lib/slick/t3version.ts
						* Resources/Private/Fluid
							* Default/Slick/Partials/Image
								* 087.html
								* 104.html
								* Version.html