@@ -1,2 +1,1 @@
 <INCLUDE_TYPOSCRIPT: source="FILE:EXT:slick/Configuration/TypoScript/8.7/Content/tt_content/slickcontent.ts">
-//<INCLUDE_TYPOSCRIPT: source="FILE:EXT:slick/Configuration/TypoScript/8.7/Content/tt_content/slickitem.ts">
